<resources>
    <string name="app_name">Bill Please</string>
    <string name="amount">Amount</string>
    <string name="enter_amount">Enter Amount</string>
    <string name="num_of_pax">Num of Pax</string>
    <string name="enter_num_of_pax">Enter Num of Pax</string>
    <string name="svs_disabled">Svs_Disabled</string>
    <string name="svs_enabled">Svs_Enabled</string>
    <string name="gst_disabled">gst_disabled</string>
    <string name="gst_enabled">GST_enabled</string>
    <string name="discount">Discount(%)</string>
    <string name="enter_discount">Enter Discount</string>
    <string name="total_bil">Total Bil:</string>
    <string name="each_pay">Each Pay:</string>
    <string name="reset">Reset</string>
    <string name="split">Split</string>
    <string name="paynow">PayNow</string>
    <string name="cash">Cash</string>
</resources>