<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">


    <TextView
        android:id="@+id/amount"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/amount"
        android:textSize="24sp" />

    <EditText
        android:id="@+id/amountentered"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:hint="@string/enter_amount"
        android:inputType="textPersonName" />

    <TextView
        android:id="@+id/numofpax"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="15dp"
        android:text="@string/num_of_pax"
        android:textSize="24sp" />

    <EditText
        android:id="@+id/paxentered"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:hint="@string/enter_num_of_pax"
        android:inputType="textPersonName"
        android:textSize="18sp" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="15dp"
        android:orientation="horizontal">

        <ToggleButton
            android:id="@+id/svs"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="SVS"
            android:textOff="@string/svs_disabled"
            android:textOn="@string/svs_enabled" />

        <ToggleButton
            android:id="@+id/gst"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="GST"
            android:textOff="@string/gst_disabled"
            android:textOn="@string/gst_enabled" />
    </LinearLayout>

    <TextView
        android:id="@+id/discount"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="15dp"
        android:text="@string/discount"
        android:textSize="24sp" />

    <EditText
        android:id="@+id/discountentered"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:hint="@string/enter_discount"
        android:inputType="textPersonName" />

    <RadioGroup
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <RadioButton
            android:id="@+id/cash"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/cash" />

        <RadioButton
            android:id="@+id/paynow"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/paynow" />
    </RadioGroup>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <Button
            android:id="@+id/split"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="10dp"
            android:layout_weight="0.5"
            android:text="@string/split"
            app:backgroundTint="@android:color/darker_gray" />

        <Button
            android:id="@+id/reset"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="10dp"
            android:layout_weight="0.5"
            android:text="@string/reset"
            app:backgroundTint="@android:color/darker_gray" />
    </LinearLayout>

    <TextView
        android:id="@+id/totbill"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textSize="18sp" />

    <TextView
        android:id="@+id/toteachpay"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textSize="18sp"
        android:layout_marginTop="10dp"/>

</LinearLayout>
